PPC64/AIX: Several smaller fixes

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • 9
    • b08
    • ppc
    • aix

        This change fixes a row of smaller issues in the ppc64 and aix port files.

         - Improve checks for (un)supported instructions.
         - Enable TrapBasedRangeChecks, was disabled by accident.
         - Remove some useless NULL checks.
         - Adapt includes for 8003935: Simplify the needed includes for using Thread::current().
         - Add missing cast in load_const_optimized(). Asserts on aix.
         - Port 8014555: G1: Memory ordering problem with Conc refinement and card marking to ppc.

              Assignee:
              Goetz Lindenmaier
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: