8037915: PPC64/AIX: Several smaller fixes

Reviewed-by: kvn